--- a/assets/scss/echomtg/main.scss
+++ b/assets/scss/echomtg/main.scss
@@ -874,9 +874,6 @@ $olheight: 24px;
 			&:first-child{
 				border: none;
 			}
-			&:nth(even){
-				background: black;
-			}
 		}
 
 	}
