--- a/old_files/css/inventory.less
+++ b/old_files/css/inventory.less
@@ -14,8 +14,8 @@
 
 	display: inline-block;
 
-	border-radius: 1px;	
-	
+	border-radius: 1px;
+
 }
 
 .inventoryControlBar{
@@ -33,7 +33,7 @@
 		max-width: 20px;
 		max-height: 18px;
 	}
-	
+
 	&.foiled{
 		.multiplier{
 			background: darken(@foil-price,70%) !important;
@@ -41,7 +41,7 @@
 			//border: 1px darken(@foil-price,50%) solid;
 		}
 	}
-	
+
 	&.collapsed {
 		display: none;
 		@media all and (max-width: @break-width){
@@ -54,11 +54,11 @@
 			}
 		}
 	}
-	
+
 	&.expand{
 		border-color: #17191d !important;
 		@media all and (max-width: @break-width){
-			display:none;	
+			display:none;
 		}
 		background:darken(@mage-dark,8%);
 		td{
@@ -75,24 +75,24 @@
 		}
 		&.opened{
 			img {
-				display:none;   
+				display:none;
 			}
 			td{
 				background:darken(@mage-dark,4%);
 				border-color: #17191d !important;
 			}
-			
-			.fa-angle-down{  
+
+			.fa-angle-down{
 				display:inline;
 			}
 			.fa-angle-right{
 				display:none;
-			}		
-			
+			}
+
 		}
-		
+
 	}
-	
+
 }
 
 
@@ -102,14 +102,14 @@
 
 .inventory-search{
 
-	
+
 	&.thinking{
 		background-image: url('https://assets.echomtg.com/interface/dashinfinity.gif');
 		background-position: center center !important;
 		background-size: contain !important;
 		background-repeat: no-repeat;
 	}
-} 
+}
 
 @media all and (min-width: @break-width){
 	.inventory-advanced{
@@ -119,7 +119,7 @@
 		padding-bottom: 8px;
 		background: @black;
 		box-shadow: 0px 0px 10px black;
-		border-bottom: 1px @border-color solid;		
+		border-bottom: 1px @border-color solid;
 		z-index: 100;
 		@media all and (max-width: @break-width){
 			left: 0px;
@@ -128,7 +128,7 @@
 			margin-top: 10px;
 		}
 	}
-	
+
 }
 @media all and (min-width: @break-width + 295) {
 
@@ -211,12 +211,12 @@ table {
 	text-align:center;
 	p{
 		color: #999;
-		
+
 	}
 	h1{
 		font-size: 42px;
 	}
-	
+
 }
 
 
@@ -228,11 +228,11 @@ table {
 		max-width: 460px;
 		margin: 40px auto;
 	}
-	
+
 }
 
 .inventory, .set, .admin, .groups, .import, .watchlist, .speculations, #list{
-	
+
 	table {
 		margin: 0;
 		padding: 0;
@@ -243,32 +243,29 @@ table {
 			//border-bottom: 1px solid @border-color;
 			border-top: 1px solid darken(@border-color,10%);
 			.transition(all 250ms ease-in);
-			
+
 			&.importsuccess{
 				border: 1px #0e460f solid !important;
 				background: #072407 !important;
 			}
-			
+
 			&.importfail{
 				border: 1px #460e0e solid !important;
 				background: #3e0e0e !important;
-			}			
-			
+			}
+
 			&:first-child{
 				border-radius:  5px 5px 0px 0px;
-				//border-top: 1px @border-color solid;	
+				//border-top: 1px @border-color solid;
 			}
 			&:last-child {
 				border-radius: 0px 0px 5px 5px;
 			}
-			&:nth-child(even) {
-				//background: #1d1d1d;
-			}
-			
+
 			th,td {
 				padding: 8px 8px;
 				text-align: left;
-				
+
 				.multiplier{
 					background: @mage-dark;
 					color: lighten(@mage-grey,10%);
@@ -281,7 +278,7 @@ table {
 				}
 				&.manacost{
 					width: 100px;
-					
+
 				}
 				&.change{
 					width: 60px;
@@ -291,25 +288,25 @@ table {
 					&.manacost{
 						display: none;
 					}
-				}	
+				}
 				&.card-inventory-display-name,&.action-buttons{
 					@media all and (max-width: @break-width){
 						width: 50%;
 					}
 				}
-				
+
 			}
 			th {
 				border-width: 2px;
 				@media all and (max-width: @break-width){
 					font-size: 10px;
-					
+
 				}
 			}
 			td {
 				color: #999;
 				//border-right: 1px #3b3b3b solid;
-				
+
 				@media all and (max-width: @break-width){
 					border: none;
 					font-size: 11px;
@@ -323,7 +320,7 @@ table {
 					}
 				}
 			}
-			
+
 		}
 
 
@@ -335,7 +332,7 @@ table {
 			}
 		}
 
-		
+
 		a.earnings-add{
 
 			//color: darken(#666,10%);
@@ -348,8 +345,8 @@ table {
 			//	color: darken(lime,20%)  !important;
 			//	border-color: darken(lime,50%);
 			//}
-			
-		}	
+
+		}
 
 		a.remove{
 			color: #000;
@@ -365,15 +362,15 @@ table {
 				background: green !important;
 				color: white;
 			}
-		}		
-		
+		}
+
 	}
 }
 
 .inventory{
 	#inventory-list tr td, #inventory-list tr th{
-	
-	
+
+
 		&:first-child{
 			text-align: center;
 			width: 46px;
@@ -382,7 +379,7 @@ table {
 				padding-top: 5px;
 			}
 		}
-		
+
 			.price{
 			color: white;
 			//font-weight: bold;
@@ -392,15 +389,15 @@ table {
 			em{
 				font-size: 12px;
 				color: #999;
-			}	
-			
-			
+			}
+
+
 		}
-		
-		
+
+
 	}
-	
-	
+
+
 }
 .do-you-own{
 	li{
@@ -411,29 +408,29 @@ table {
 		border-bottom: 1px @mage-dark solid;
 		@media all and (max-width: @break-width){
 			height: 44px;
-			
+
 		}
 		.destroy-qiadd{
-			background: #4c4c4c; 
-			color: #777; 
-			border-color: #333; 
+			background: #4c4c4c;
+			color: #777;
+			border-color: #333;
 			margin-left: 20px;
 			display: block;
 			@media all and (max-width: @break-width){
 				margin-left: 5px;
 			}
 		}
-		
+
 		&:nth-child(even){
 			//background: @mage-dark;
-			
+
 		}
 	}
-	
+
 }
 
 #quick-add-foil-option{
-	
+
 	color: darken(@border-color,10%);
 	background: transparent;
 	border-color: @border-color;
@@ -444,7 +441,7 @@ table {
 	padding: 8px 0px;
 	text-align: center;
 	box-shadow: none;
-	
+
 	&:hover,&.foiled{
 		background: darken(@foil-price,70%) !important;
 		color: darken(@foil-price,50%);
@@ -464,8 +461,8 @@ table {
 	border-radius: 4px !important;
 	padding: 5px 0px;
 	background-color: #000 !important;
-	
-	
+
+
 }
 
 #quick-add-acquired{
@@ -489,17 +486,17 @@ table {
 	color: #999;
 	text-indent: 3px;
 	max-width: 60px;
-	
+
 	padding: 3px 0px;
 	&:hover, &:focus{
 		background: #fff;
 		color: #000;
 	}
-	
+
 	&.datepicker{
 		font-size: 11px;
 	}
-	
+
 	&.acquired-date-input{
 		font-size: 11px;
 		max-width: 124px;
@@ -516,7 +513,7 @@ table {
 	&.active{
 		display: block;
 	}
-	
+
 }
 
 .list-tabs a, .list-tabs-earnings a{
@@ -531,7 +528,7 @@ table {
 	font-size: 12px;
 	border-radius: 3px;
 	margin: 0px 2px;
-	
+
 	span{
 		color: #777;
 	}
@@ -549,7 +546,7 @@ table {
 }
 .list-tabs{
 	display: inline-block;
-	
+
 		a{
 		width: 88px;
 		padding: 8px 0px 8px 0px;
@@ -560,20 +557,20 @@ table {
 				display:none;
 			}
 		}
-			
+
 		span{
 			box-shadow: none;
 			color: black;
 		}
 	}
-	
+
 }
 .color-lists{
 	table{
 		border-top: 0px;
 		thead{
 		tr{
-						border-top:none;	
+						border-top:none;
 			th{
 				border-top:none;
 			}
@@ -587,19 +584,19 @@ td.card-inventory-display-name{
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
-  
+
 	@media all and (max-width: @break-width){
 		img{
 			float: left !important;
 		    padding-right: 5px;
 		}
-		
+
 		.toggle_foil{
 			float:right;
 		}
-		
+
 	}
-	
+
 }
 
 .quick-add-in-table{
@@ -607,12 +604,12 @@ td.card-inventory-display-name{
 	width: 66%;
 	@media all and (max-width: @mobile-break){
 		width: auto;
-		
+
 	}
 	&.input-area{
 		background: #2b2b2b;
 	}
-	
+
 	a{
 		color: lighten(@border-color,20%) !important;
 		text-decoration: none;
@@ -620,7 +617,7 @@ td.card-inventory-display-name{
 		font-size: 12px;
 		margin-left: 10px;
 	}
-	
+
 }
 
 .decklist{
@@ -642,6 +639,6 @@ td.card-inventory-display-name{
 				font-size: 12px;
 			}
 			margin-bottom: 5px;
-		}		
-	}	
+		}
+	}
 }
